Shop the Shot close button alignment fix

--- a/app/design/frontend/Shop/hh/web/css/main.less
+++ b/app/design/frontend/Shop/hh/web/css/main.less
@@ -7206,6 +7206,8 @@ Collection Page
     width: 38px;
     line-height: 35px;
     position: absolute;
+    top: 0 !important
+    left: 0 !important;
   }
   .num {
     color: #FFF;
